--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Dec  2 12:05:02 2018</p>
+         Last Run: Sun Dec  2 13:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Dec 02, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -29,28 +29,16 @@
                   </thead>
                   <tbody>
                      <tr>
-                        <td>01:00 PM</td>
-                        <td>Snow Showers</td>
-                        <td>-2</td>
-                        <td>-6</td>
-                        <td>44</td>
-                        <td>81</td>
-                        <td>0</td>
-                        <td>11</td>
-                        <td>NNW</td>
-                        <td>97</td>
-                     </tr>
-                     <tr>
                         <td>02:00 PM</td>
                         <td>Overcast</td>
                         <td>-2</td>
                         <td>-6</td>
-                        <td>24</td>
-                        <td>74</td>
+                        <td>8</td>
+                        <td>78</td>
                         <td>0</td>
-                        <td>11</td>
+                        <td>10</td>
                         <td>NNW</td>
-                        <td>94</td>
+                        <td>93</td>
                      </tr>
                   </tbody>
                </table>
@@ -65,7 +53,6 @@
                   var ctx = document.getElementById("chartHTMLReportGenerator1").getContext("2d");
                   var data ={
            "labels":[
-             "01:00 PM",
              "02:00 PM"
            ],
            "datasets":[
@@ -76,7 +63,6 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-6",
                  "-6"
                ]
              },
@@ -87,7 +73,6 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
-                 "-2",
                  "-2"
                ]
              }
@@ -134,7 +119,6 @@
                   var ctx = document.getElementById("chartHTMLReportGenerator2").getContext("2d");
                   var data ={
            "labels":[
-             "01:00 PM",
              "02:00 PM"
            ],
            "datasets":[
@@ -144,8 +128,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "44",
-                 "24"
+                 "8"
                ]
              },
              {
@@ -154,8 +137,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "81",
-                 "74"
+                 "78"
                ]
              },
              {
@@ -164,8 +146,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "97",
-                 "94"
+                 "93"
                ]
              }
            ]
@@ -206,7 +187,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Dec  2 12:05:02 2018</p>
+         Last Run: Sun Dec  2 13:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Dec 03, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -235,7 +216,7 @@
                         <td>0</td>
                         <td>8</td>
                         <td>WSW</td>
-                        <td>36</td>
+                        <td>37</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
@@ -247,7 +228,7 @@
                         <td>0</td>
                         <td>8</td>
                         <td>WSW</td>
-                        <td>27</td>
+                        <td>28</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
@@ -259,7 +240,7 @@
                         <td>0</td>
                         <td>8</td>
                         <td>WSW</td>
-                        <td>22</td>
+                        <td>23</td>
                      </tr>
                   </tbody>
                </table>
@@ -379,9 +360,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "36",
-                 "27",
-                 "22"
+                 "37",
+                 "28",
+                 "23"
                ]
              }
            ]
@@ -421,7 +402,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Dec  2 12:05:02 2018</p>
+         Last Run: Sun Dec  2 13:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Dec 05, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -458,7 +439,7 @@
                         <td>-13</td>
                         <td>-18</td>
                         <td>6</td>
-                        <td>84</td>
+                        <td>85</td>
                         <td>0</td>
                         <td>8</td>
                         <td>SSW</td>
@@ -470,7 +451,7 @@
                         <td>-14</td>
                         <td>-19</td>
                         <td>6</td>
-                        <td>86</td>
+                        <td>87</td>
                         <td>0</td>
                         <td>8</td>
                         <td>SSW</td>
@@ -584,8 +565,8 @@
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
                  "86",
-                 "84",
-                 "86"
+                 "85",
+                 "87"
                ]
              },
              {
@@ -636,7 +617,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Dec  2 12:05:02 2018</p>
+         Last Run: Sun Dec  2 13:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Foothills WFC 17 - Foothills Telus Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Dec 08, 2018 - 10:35AM til 11:35AM</H4>
                <table class="table table-striped">
@@ -661,11 +642,11 @@
                         <td>-7</td>
                         <td>-12</td>
                         <td>0</td>
-                        <td>56</td>
+                        <td>58</td>
                         <td>0</td>
                         <td>11</td>
                         <td>WSW</td>
-                        <td>39</td>
+                        <td>40</td>
                      </tr>
                      <tr>
                         <td>11:00 AM</td>
@@ -673,11 +654,11 @@
                         <td>-5</td>
                         <td>-10</td>
                         <td>0</td>
-                        <td>53</td>
+                        <td>55</td>
                         <td>0</td>
                         <td>11</td>
                         <td>WSW</td>
-                        <td>40</td>
+                        <td>41</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
@@ -685,11 +666,11 @@
                         <td>-3</td>
                         <td>-7</td>
                         <td>0</td>
-                        <td>51</td>
+                        <td>52</td>
                         <td>1</td>
                         <td>11</td>
-                        <td>W</td>
-                        <td>40</td>
+                        <td>WSW</td>
+                        <td>42</td>
                      </tr>
                   </tbody>
                </table>
@@ -798,9 +779,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "56",
-                 "53",
-                 "51"
+                 "58",
+                 "55",
+                 "52"
                ]
              },
              {
@@ -809,9 +790,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "39",
                  "40",
-                 "40"
+                 "41",
+                 "42"
                ]
              }
            ]
