--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Dec  2 16:05:02 2018</p>
+         Last Run: Sun Dec  2 17:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Dec 03, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -30,39 +30,39 @@
                   <tbody>
                      <tr>
                         <td>09:00 PM</td>
-                        <td>Partly Cloudy</td>
-                        <td>-10</td>
-                        <td>-14</td>
-                        <td>7</td>
-                        <td>86</td>
+                        <td>Clear</td>
+                        <td>-11</td>
+                        <td>-16</td>
+                        <td>6</td>
+                        <td>87</td>
                         <td>0</td>
                         <td>8</td>
                         <td>WSW</td>
-                        <td>36</td>
+                        <td>28</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
-                        <td>Partly Cloudy</td>
+                        <td>Clear</td>
                         <td>-11</td>
                         <td>-16</td>
                         <td>6</td>
                         <td>84</td>
                         <td>0</td>
-                        <td>8</td>
+                        <td>10</td>
                         <td>W</td>
-                        <td>31</td>
+                        <td>24</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
                         <td>Clear</td>
                         <td>-11</td>
                         <td>-16</td>
-                        <td>6</td>
+                        <td>5</td>
                         <td>85</td>
                         <td>0</td>
                         <td>8</td>
                         <td>WSW</td>
-                        <td>26</td>
+                        <td>20</td>
                      </tr>
                   </tbody>
                </table>
@@ -89,7 +89,7 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-14",
+                 "-16",
                  "-16",
                  "-16"
                ]
@@ -101,7 +101,7 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
-                 "-10",
+                 "-11",
                  "-11",
                  "-11"
                ]
@@ -160,9 +160,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "7",
                  "6",
-                 "6"
+                 "6",
+                 "5"
                ]
              },
              {
@@ -171,7 +171,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "86",
+                 "87",
                  "84",
                  "85"
                ]
@@ -182,9 +182,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "36",
-                 "31",
-                 "26"
+                 "28",
+                 "24",
+                 "20"
                ]
              }
            ]
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Dec  2 16:05:02 2018</p>
+         Last Run: Sun Dec  2 17:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Dec 05, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -249,7 +249,7 @@
                         <td>-14</td>
                         <td>-19</td>
                         <td>7</td>
-                        <td>85</td>
+                        <td>86</td>
                         <td>0</td>
                         <td>8</td>
                         <td>SSW</td>
@@ -261,7 +261,7 @@
                         <td>-14</td>
                         <td>-19</td>
                         <td>6</td>
-                        <td>85</td>
+                        <td>86</td>
                         <td>0</td>
                         <td>8</td>
                         <td>SSW</td>
@@ -273,7 +273,7 @@
                         <td>-15</td>
                         <td>-20</td>
                         <td>6</td>
-                        <td>88</td>
+                        <td>89</td>
                         <td>0</td>
                         <td>8</td>
                         <td>SSW</td>
@@ -386,9 +386,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "85",
-                 "85",
-                 "88"
+                 "86",
+                 "86",
+                 "89"
                ]
              },
              {
@@ -439,7 +439,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Dec  2 16:05:02 2018</p>
+         Last Run: Sun Dec  2 17:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Foothills WFC 17 - Foothills Telus Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Dec 08, 2018 - 10:35AM til 11:35AM</H4>
                <table class="table table-striped">
@@ -460,7 +460,7 @@
                   <tbody>
                      <tr>
                         <td>10:00 AM</td>
-                        <td>Partly Cloudy</td>
+                        <td>Clear</td>
                         <td>-7</td>
                         <td>-12</td>
                         <td>1</td>
@@ -468,7 +468,7 @@
                         <td>0</td>
                         <td>10</td>
                         <td>WSW</td>
-                        <td>40</td>
+                        <td>28</td>
                      </tr>
                      <tr>
                         <td>11:00 AM</td>
@@ -476,11 +476,11 @@
                         <td>-5</td>
                         <td>-10</td>
                         <td>1</td>
-                        <td>58</td>
+                        <td>59</td>
                         <td>0</td>
                         <td>11</td>
                         <td>WSW</td>
-                        <td>42</td>
+                        <td>30</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
@@ -488,11 +488,11 @@
                         <td>-3</td>
                         <td>-7</td>
                         <td>1</td>
-                        <td>54</td>
+                        <td>56</td>
                         <td>1</td>
                         <td>11</td>
                         <td>WSW</td>
-                        <td>43</td>
+                        <td>32</td>
                      </tr>
                   </tbody>
                </table>
@@ -602,8 +602,8 @@
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
                  "62",
-                 "58",
-                 "54"
+                 "59",
+                 "56"
                ]
              },
              {
@@ -612,9 +612,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "40",
-                 "42",
-                 "43"
+                 "28",
+                 "30",
+                 "32"
                ]
              }
            ]
