--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Dec  2 18:05:02 2018</p>
+         Last Run: Sun Dec  2 19:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Dec 03, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -38,19 +38,19 @@
                         <td>0</td>
                         <td>8</td>
                         <td>W</td>
-                        <td>27</td>
+                        <td>28</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
                         <td>Clear</td>
                         <td>-11</td>
                         <td>-16</td>
-                        <td>5</td>
-                        <td>84</td>
+                        <td>6</td>
+                        <td>85</td>
                         <td>0</td>
                         <td>10</td>
                         <td>W</td>
-                        <td>23</td>
+                        <td>26</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
@@ -61,8 +61,8 @@
                         <td>85</td>
                         <td>0</td>
                         <td>8</td>
-                        <td>WSW</td>
-                        <td>19</td>
+                        <td>W</td>
+                        <td>21</td>
                      </tr>
                   </tbody>
                </table>
@@ -161,7 +161,7 @@
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
                  "6",
-                 "5",
+                 "6",
                  "5"
                ]
              },
@@ -172,7 +172,7 @@
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
                  "86",
-                 "84",
+                 "85",
                  "85"
                ]
              },
@@ -182,9 +182,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "27",
-                 "23",
-                 "19"
+                 "28",
+                 "26",
+                 "21"
                ]
              }
            ]
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Dec  2 18:05:02 2018</p>
+         Last Run: Sun Dec  2 19:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Dec 05, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -249,7 +249,7 @@
                         <td>-14</td>
                         <td>-19</td>
                         <td>7</td>
-                        <td>86</td>
+                        <td>87</td>
                         <td>0</td>
                         <td>8</td>
                         <td>SSW</td>
@@ -386,7 +386,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "86",
+                 "87",
                  "86",
                  "89"
                ]
@@ -439,7 +439,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Dec  2 18:05:02 2018</p>
+         Last Run: Sun Dec  2 19:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Foothills WFC 17 - Foothills Telus Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Dec 08, 2018 - 10:35AM til 11:35AM</H4>
                <table class="table table-striped">
@@ -461,22 +461,22 @@
                      <tr>
                         <td>10:00 AM</td>
                         <td>Clear</td>
-                        <td>-7</td>
-                        <td>-12</td>
+                        <td>-6</td>
+                        <td>-10</td>
                         <td>1</td>
                         <td>62</td>
                         <td>0</td>
                         <td>10</td>
                         <td>WSW</td>
-                        <td>28</td>
+                        <td>27</td>
                      </tr>
                      <tr>
                         <td>11:00 AM</td>
                         <td>Partly Cloudy</td>
-                        <td>-5</td>
-                        <td>-10</td>
+                        <td>-4</td>
+                        <td>-8</td>
                         <td>1</td>
-                        <td>59</td>
+                        <td>58</td>
                         <td>0</td>
                         <td>11</td>
                         <td>WSW</td>
@@ -485,13 +485,13 @@
                      <tr>
                         <td>12:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>-3</td>
-                        <td>-7</td>
+                        <td>-2</td>
+                        <td>-6</td>
                         <td>1</td>
-                        <td>56</td>
+                        <td>55</td>
                         <td>1</td>
                         <td>11</td>
-                        <td>W</td>
+                        <td>WSW</td>
                         <td>32</td>
                      </tr>
                   </tbody>
@@ -519,9 +519,9 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-12",
                  "-10",
-                 "-7"
+                 "-8",
+                 "-6"
                ]
              },
              {
@@ -531,9 +531,9 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
-                 "-7",
-                 "-5",
-                 "-3"
+                 "-6",
+                 "-4",
+                 "-2"
                ]
              }
            ]
@@ -602,8 +602,8 @@
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
                  "62",
-                 "59",
-                 "56"
+                 "58",
+                 "55"
                ]
              },
              {
@@ -612,9 +612,224 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "28",
+                 "27",
                  "30",
                  "32"
+               ]
+             }
+           ]
+         };
+                  var options = {
+                     legend: {
+                         position: 'right'
+                     },
+                     scales: {
+                         xAxes: [{
+                             display: true,
+                             scaleLabel: {labelString: 'Date/Time', display: true},
+                             ticks: {
+                                 autoSkip: false
+                             }
+                         }],
+                         yAxes: [{
+                             display: true,
+                             scaleLabel: {labelString: 'Percentage (%)', display: true},
+                             ticks: {
+                                 beginAtZero: true
+                             }
+                         }]
+                     },
+                     tooltips: {
+                         mode: 'index'
+                     }
+                  };
+                  var MyNewChart = new Chart(ctx, {
+                     type: 'bar',
+                     data: data,
+                     options: options
+                  });
+               </script>
+         <hr style="border-width:5px ">
+      </div>
+      <div style="padding:10px;border: 1px none black">
+         <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
+         <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
+         Last Run: Sun Dec  2 19:05:02 2018</p>
+               <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
+               <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Dec 09, 2018 - 12:30PM til  2:00PM</H4>
+               <table class="table table-striped">
+                  <thead>
+                     <tr>
+                        <th>Forecast Time</th>
+                        <th>Summary</th>
+                        <th>Temperture (°C)</th>
+                        <th>Feels Like (°C)</th>
+                        <th>POP (%)</th>
+                        <th>Humidity (%)</th>
+                        <th>UV</th>
+                        <th>Wind (km/hr)</th>
+                        <th>Wind Dir.</th>
+                        <th>Cloud Cover (%)</th>
+                     </tr>
+                  </thead>
+                  <tbody>
+                     <tr>
+                        <td>12:00 PM</td>
+                        <td>Clear</td>
+                        <td>-2</td>
+                        <td>-6</td>
+                        <td>2</td>
+                        <td>59</td>
+                        <td>1</td>
+                        <td>11</td>
+                        <td>SW</td>
+                        <td>26</td>
+                     </tr>
+                     <tr>
+                        <td>01:00 PM</td>
+                        <td>Partly Cloudy</td>
+                        <td>0</td>
+                        <td>-4</td>
+                        <td>2</td>
+                        <td>55</td>
+                        <td>1</td>
+                        <td>11</td>
+                        <td>SW</td>
+                        <td>33</td>
+                     </tr>
+                     <tr>
+                        <td>02:00 PM</td>
+                        <td>Partly Cloudy</td>
+                        <td>0</td>
+                        <td>-4</td>
+                        <td>2</td>
+                        <td>53</td>
+                        <td>0</td>
+                        <td>11</td>
+                        <td>WSW</td>
+                        <td>38</td>
+                     </tr>
+                  </tbody>
+               </table>
+               </style>
+               <div class="container-fluid">
+               	<div class="row">
+               		<div class="col-xs-8" style="text-align:center"><canvas id="chartHTMLReportGenerator7"></canvas></div>
+               	</div>
+               </div>
+               <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.2/Chart.min.js"></script>
+               <script>
+                  var ctx = document.getElementById("chartHTMLReportGenerator7").getContext("2d");
+                  var data ={
+           "labels":[
+             "12:00 PM",
+             "01:00 PM",
+             "02:00 PM"
+           ],
+           "datasets":[
+             {
+               "label":"apparentTemperature",
+               "borderColor":"rgba(92,0,141,1)",
+               "borderWidth":2,
+               "pointColor":"rgba(92,0,141,1)",
+               "backgroundColor":"rgba(92,0,141,0)",
+               "data":[
+                 "-6",
+                 "-4",
+                 "-4"
+               ]
+             },
+             {
+               "label":"temperature",
+               "borderColor":"rgba(252,49,18,1)",
+               "borderWidth":2,
+               "pointColor":"rgba(252,49,18,1)",
+               "backgroundColor":"rgba(252,49,18,0)",
+               "data":[
+                 "-2",
+                 "0",
+                 "0"
+               ]
+             }
+           ]
+         };
+                  var options = {
+                     legend: {
+                         position: 'right'
+                     },
+                     scales: {
+                         xAxes: [{
+                             display: true,
+                             scaleLabel: {labelString: 'Date/Time', display: true},
+                             ticks: {
+                                 autoSkip: false
+                             }
+                         }],
+                         yAxes: [{
+                             display: true,
+                             scaleLabel: {labelString: 'Temp (C)', display: true},
+                             ticks: {
+                                 beginAtZero: false
+                             }
+                         }]
+                     },
+                     tooltips: {
+                         mode: 'index'
+                     }
+                  };
+                  var MyNewChart = new Chart(ctx, {
+                     type: 'line',
+                     data: data,
+                     options: options
+                  });
+               </script>
+               </style>
+               <div class="container-fluid">
+               	<div class="row">
+               		<div class="col-xs-8" style="text-align:center"><canvas id="chartHTMLReportGenerator8"></canvas></div>
+               	</div>
+               </div>
+               <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.2/Chart.min.js"></script>
+               <script>
+                  var ctx = document.getElementById("chartHTMLReportGenerator8").getContext("2d");
+                  var data ={
+           "labels":[
+             "12:00 PM",
+             "01:00 PM",
+             "02:00 PM"
+           ],
+           "datasets":[
+             {
+               "label":"precipProbability",
+               "borderColor":"rgba(0,0,255,1)",
+               "borderWidth":2,
+               "backgroundColor":"rgba(0,0,255,0.5)",
+               "data":[
+                 "2",
+                 "2",
+                 "2"
+               ]
+             },
+             {
+               "label":"humidity",
+               "borderColor":"rgba(40,177,255,1)",
+               "borderWidth":2,
+               "backgroundColor":"rgba(40,177,255,0.5)",
+               "data":[
+                 "59",
+                 "55",
+                 "53"
+               ]
+             },
+             {
+               "label":"cloudCover",
+               "borderColor":"rgba(233,37,255,1)",
+               "borderWidth":2,
+               "backgroundColor":"rgba(233,37,255,0.5)",
+               "data":[
+                 "26",
+                 "33",
+                 "38"
                ]
              }
            ]
